[tool.poetry]
name = "gpt-to-dalle-flow"
version = "0.1.0"
description = ""
authors = ["Inathero"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
spyder = "^5.3.2"
docarray = "^0.13.31"
jina = "^3.6.13"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
